--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         }
 
         .logo-img {
-            height: 90px; /* Un poco más grande */
+            height: 90px;
             width: auto;
             border-radius: 50%;
             border: 3px solid rgba(255,255,255,0.2);
             background: white;
             padding: 2px;
-            object-fit: contain; /* Asegura que el logo no se deforme */
+            object-fit: contain;
         }
 
         /* Reloj Digital */
@@ -177,6 +177,9 @@
             <a href="suspensiones.html" class="btn btn-quick">
                 <i class="fa-solid fa-gavel text-danger"></i> Nueva Suspensión
             </a>
+            <a href="salida_alumnos.html" class="btn btn-quick">
+                <i class="fa-solid fa-door-open text-primary"></i> Nueva Salida
+            </a>
             <a href="index.html" class="btn btn-quick">
                 <i class="fa-solid fa-home text-success"></i> Volver al Portal General
             </a>
@@ -212,13 +215,13 @@
             </div>
 
             <div class="col-md-6 col-lg-6">
-                <a href="#" class="module-card card-salidas" onclick="alert('Módulo en construcción')">
+                <a href="salida_alumnos.html" class="module-card card-salidas">
                     <div class="icon-box">
                         <i class="fa-solid fa-door-open"></i>
                     </div>
                     <div class="card-content">
                         <h5>Pases de Salida</h5>
-                        <p>Autorización digital para el retiro de estudiantes durante la jornada escolar.</p>
+                        <p>Autorización digital para el retiro de estudiantes y control de folios.</p>
                     </div>
                 </a>
             </div>
@@ -242,8 +245,8 @@
                 <div>
                     <h5 class="fw-bold text-dark">Recordatorios para Inspectores</h5>
                     <ul class="mb-0 text-secondary small">
-                        <li>Recuerde <strong>imprimir el reporte de atrasos</strong> antes de las 18:00 hrs para el archivo físico.</li>
-                        <li>Para las suspensiones, asegúrese de que la <strong>Carta de Compromiso</strong> esté firmada por el apoderado al momento del reintegro.</li>
+                        <li>Recuerde <strong>imprimir el reporte de atrasos</strong> antes de las 18:00 hrs.</li>
+                        <li>Para retiros de alumnos, verifique siempre la identidad del apoderado y el <strong>número de folio</strong>.</li>
                         <li>Verifique siempre que la hora del reloj digital coincida con la hora oficial.</li>
                     </ul>
                 </div>
